--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ authors = ["lockorsa <lockorsa@gmail.com>"]
 [tool.poetry.dependencies]
 python = "^3.10"
 Django = "^3.2.8"
+Pillow = "^8.4.0"
 
 [tool.poetry.dev-dependencies]
 wemake-python-styleguide = "^0.15.3"
